--- a/style.css
+++ b/style.css
@@ -1,24 +1,22 @@
 body{
     font-family: sans-serif;
     background: hsl(212, 45%, 89%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 .container{
     border-radius: 9px;
-    width: 320px;
-    
-    position: absolute;
-    background: hsl(0, 0%, 100%);
-    left: 50%;
-    
-    top: 50%;
-    transform: translate(-50%, -50%);
     padding: 20px;
-    box-shadow: 0 1px 4px  black;
+    box-shadow: 0 1px 8px -2px  black;
+    background: white;
+    width: 350px;
 }
 .image img{
     margin: 0 auto;
     border-radius: 6px;
-    width: 100%;
+    max-width: 100%;
 }
 .container .title{
     text-align: center;
@@ -33,11 +31,20 @@ body{
     line-height: 20px;
     color: hsl(220, 15%, 55%);
 }
+@media (max-width: 768px){
+  .container{
+    padding: 10px;
+    margin: 20px;
+  }
+}
 /*---------------------  attribution   ------------------------*/
 a{
     text-decoration: none;
-    color: cyan;
+    color: #1EB9D5;
+    
 }
 .attribution{
-    margin: 20px;
+    margin: 20px auto;
+    font-size: 12px;
+    width: fit-content;
 }
